# projeto_ml

./: README.md  app.py  pyproject.toml
